# fastapiredis

./: .env  .gitignore  README.md  logging.yaml  mypy.ini  pyproject.toml
app/: config.py  logging.py  main.py  middleware.py  router.py
app/routes/: background.py  misc.py  redis.py
dev/: run.py
scripts/: format.sh  lint.sh
