[tool.poetry]
name = "fastapiredisio"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "app" },
    { include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.4"
fastapi = "^0.65.0"
requests = "^2.23.0"
pydantic = "^1.4"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
python-dotenv = "^0.17.1"
PyYAML = "^5.4.1"
aioredis = "^1.3.1"


[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.5b1"
isort = "^5.8.0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^6.2.4"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 129

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 129
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.poetry.scripts]
dev = "dev.run:main"
lint = "dev.script:lint"
format = "dev.script:format"
coverage = "dev.script:coverage"
script = "dev.script:run"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

